--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -5,10 +5,16 @@ permalink: /academic/
 author_profile: true
 ---
 
-# Research
+<h1>Research</h1>
 
+<p>
 I have written my M.A. thesis titled "The Role of Bureaucratic Purges in Shaping Public Service Provision" at the Political Science department in Sabanci University with my advisor Assist. Prof. Fatih Serkant Adiguzel. Here is its abstract and link:
+</p>
 
+<p>
 "This thesis examines the impact of bureaucratic purges on public service provision, focusing on the Turkish government's dismissal of nearly 130,000 public employees between 2016 and 2018 following a failed coup attempt. Leveraging novel administrative data on each dismissed state employee, it begins with an analysis of the spatial and administrative distribution of the dismissals. The research mainly aims to move beyond canonical approaches that view purges primarily as a means of consolidating power using instances of elite purges. Instead, it captures the broader societal impacts by assessing changes in the state's capacity to deliver services after a mass purge. Using a difference-in-differences model to analyze the varying magnitudes of dismissals affecting public teachers on students' performance in standardized tests, the findings reveal a decrease in student performance at the district level. However, the same model does not provide evidence that the dismissal of police officers impacts crime rates. Mainly, the research aims to utilize the purge context to go beyond the limited samples and inherent methodological problems that previous studies encountered when analyzing the impact of bureaucratic capacity on public service provision and achieve a higher external validity."
+</p>
 
-[Download it from here!](.files/MahmutcanBodrumlu_MA_Thesis_PoliticalScience.pdf)
+<p>
+<a href="./files/MahmutcanBodrumlu_MA_Thesis_PoliticalScience.pdf">Download it from here!</a>
+</p>
