--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -16,5 +16,5 @@ I have written my M.A. thesis titled "The Role of Bureaucratic Purges in Shaping
 </p>
 
 <p>
-<a href="./files/MahmutcanBodrumlu_MA_Thesis_PoliticalScience.pdf">Download it from here!</a>
+<a href="/files/MahmutcanBodrumlu_MA_Thesis_PoliticalScience.pdf">Download it from here!</a>
 </p>
