--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -5,10 +5,11 @@ permalink: /academic/
 author_profile: true
 ---
 
-<h1>Research</h1>
+<h2>Research</h2>
 
 <p>
-I have written my M.A. thesis titled "The Role of Bureaucratic Purges in Shaping Public Service Provision" at the Political Science department in Sabanci University with my advisor Assist. Prof. Fatih Serkant Adiguzel. Here is its abstract and link:
+I completed my M.A. thesis titled "The Role of Bureaucratic Purges in Shaping Public Service Provision" in the Political Science department at Sabancı University, under the guidance of my advisor, Assist. Prof. Fatih Serkant Adıgüzel. Below is its abstract and link:
+
 </p>
 
 <p>
@@ -18,3 +19,7 @@ I have written my M.A. thesis titled "The Role of Bureaucratic Purges in Shaping
 <p>
 <a href="/files/MahmutcanBodrumlu_MA_Thesis_PoliticalScience.pdf" target="_blank">Download it from here!</a>
 </p>
+
+<h2>Teaching</h2>
+
+I worked as a teaching assistant at Sabancı University from 2022 to 2024, leading discussion sessions for the Humanity and Society course, which included two sections each semester.
