--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -8,3 +8,7 @@ redirect_from:
 ---
 
 You can download my CV <a href="./files/Can_Bodrumlu_Resume.pdf" download>here</a>.
+
+<p>
+<a href="/files/Can_Bodrumlu_Resume.pdf" target="_blank">You can download my CV from here!</a>
+</p>
