--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -10,3 +10,28 @@ redirect_from:
 <p>
 <a href="/files/Can_Bodrumlu_Resume.pdf" target="_blank">You can download my CV from here!</a>
 </p>
+
+
+
+<style>
+  .download-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #007bff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+
+  .download-button:hover {
+    background-color: #0056b3; /* Darker blue on hover */
+  }
+</style>
+
+<p>
+  <a href="/files/Can_Bodrumlu_Resume.pdf" target="_blank" class="download-button">
+    Download My CV
+  </a>
+</p>
