--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -7,12 +7,6 @@ redirect_from:
   - /resume
 ---
 
-<p>
-<a href="/files/Can_Bodrumlu_Resume.pdf" target="_blank">You can download my CV from here!</a>
-</p>
-
-
-
 <style>
   .download-button {
     display: inline-block;
@@ -20,7 +14,7 @@ redirect_from:
     font-size: 16px;
     color: #fff;
     background-color: #007bff;
-    text-decoration: none;
+    text-decoration: none; /* Ensures no underline */
     border-radius: 5px;
     transition: background-color 0.3s ease;
   }
