--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -13,7 +13,7 @@ redirect_from:
     padding: 10px 20px;
     font-size: 16px;
     color: #fff;
-    background-color: #007bff;
+    background-color: #6CB4EE;
     text-decoration: none; /* Ensures no underline */
     border-radius: 5px;
     transition: background-color 0.3s ease;
