--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -21,6 +21,10 @@ I completed my M.A. thesis titled "The Role of Bureaucratic Purges in Shaping Pu
 <a href="/files/MahmutcanBodrumlu_MA_Thesis_PoliticalScience.pdf" target="_blank">Download it from here!</a>
 </p>
 
+<h2>Working Projects</h2>
+
+<p>
+What’s in a Name? Naming Practices as Acts of Political Resistance (with Asli Cansunar, Nela Mrchkovska, and Ramses Ramses Llobet) </p>
 <h2>Teaching</h2>
 
 <p>
