--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -5,28 +5,62 @@ permalink: /academic/
 author_profile: true
 ---
 
-<h2>Research</h2>
+<div class="content">
 
-<p>
-I completed my M.A. thesis titled "The Role of Bureaucratic Purges in Shaping Public Service Provision" in the Political Science department at Sabancı University, under the guidance of my advisor, Assist. Prof. Fatih Serkant Adıgüzel. Below is its abstract and link:
-</p>
+  <section>
+    <h2>Research</h2>
+    <p>
+      I completed my M.A. thesis titled "<em>The Role of Bureaucratic Purges in Shaping Public Service Provision</em>" 
+      in the Political Science department at Sabancı University, advised by Assist. Prof. Fatih Serkant Adıgüzel. 
+      Below is its abstract and a link to download the full text:
+    </p>
 
-<p>
-<small>
-"This thesis examines the impact of bureaucratic purges on public service provision, focusing on the Turkish government's dismissal of nearly 130,000 public employees between 2016 and 2018 following a failed coup attempt. Leveraging novel administrative data on each dismissed state employee, it begins with an analysis of the spatial and administrative distribution of the dismissals. The research mainly aims to move beyond canonical approaches that view purges primarily as a means of consolidating power using instances of elite purges. Instead, it captures the broader societal impacts by assessing changes in the state's capacity to deliver services after a mass purge. Using a difference-in-differences model to analyze the varying magnitudes of dismissals affecting public teachers on students' performance in standardized tests, the findings reveal a decrease in student performance at the district level. However, the same model does not provide evidence that the dismissal of police officers impacts crime rates. Mainly, the research aims to utilize the purge context to go beyond the limited samples and inherent methodological problems that previous studies encountered when analyzing the impact of bureaucratic capacity on public service provision and achieve a higher external validity."
-</small>
-</p>
+    <blockquote>
+      <p>
+        <small>
+          "This thesis examines the impact of bureaucratic purges on public service provision, focusing on the Turkish 
+          government's dismissal of nearly 130,000 public employees between 2016 and 2018 following a failed coup 
+          attempt. Leveraging novel administrative data on each dismissed state employee, it begins with an analysis of 
+          the spatial and administrative distribution of the dismissals. The research primarily moves beyond canonical 
+          approaches that view purges as power consolidation through elite purges, and instead captures the broader 
+          societal impacts by assessing changes in the state's service delivery capacity post-purge. Using a 
+          difference-in-differences model to analyze how varying magnitudes of dismissals affect public teachers on 
+          students' standardized test performance, findings reveal a decrease in student performance at the district 
+          level, while similar analyses for police dismissals do not indicate crime rate changes. Overall, this study 
+          seeks higher external validity by moving beyond limited samples and inherent methodological constraints in 
+          prior work on bureaucratic capacity's impact on public services."
+        </small>
+      </p>
+    </blockquote>
 
-<p>
-<a href="/files/MahmutcanBodrumlu_MA_Thesis_PoliticalScience.pdf" target="_blank">Download it from here!</a>
-</p>
+    <p>
+      <a class="button" href="/files/MahmutcanBodrumlu_MA_Thesis_PoliticalScience.pdf" target="_blank">Download Thesis</a>
+    </p>
+  </section>
 
-<h2>Working Projects</h2>
+  <section>
+    <h2>Working Projects</h2>
+    <p>
+      <strong>What’s in a Name? Naming Practices as Acts of Political Resistance</strong> <br>
+      (with Asli Cansunar, Nela Mrchkovska, and Ramses Ramses Llobet)
+    </p>
+  </section>
 
-<p>
-What’s in a Name? Naming Practices as Acts of Political Resistance (with Asli Cansunar, Nela Mrchkovska, and Ramses Ramses Llobet) </p>
-<h2>Teaching</h2>
+  <section>
+    <h2>Teaching</h2>
+    <p>
+      I served as a teaching assistant at Sabancı University from 2022 to 2024, leading discussion sessions for the 
+      <em>Humanity and Society</em> course, with two sections each semester.
+    </p>
+  </section>
 
-<p>
-I worked as a teaching assistant at Sabancı University from 2022 to 2024, leading discussion sessions for the Humanity and Society course, which included two sections each semester.
-</p>
+  <section>
+    <h2>Fellowships</h2>
+    <ul>
+      <li>Graduate School Fellowship, University of Washington (2024 – Present)</li>
+      <li>Graduate School Fellowship, Sabancı University (2022 – 2024)</li>
+      <li>Undergraduate Fellowship, Boğaziçi University Foundation (2017 – 2022)</li>
+    </ul>
+  </section>
+
+</div>
