--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -42,7 +42,7 @@ author_profile: true
     <h2>Working Projects</h2>
     <p>
       <strong>What’s in a Name? Naming Practices as Acts of Political Resistance</strong> <br>
-      (with Asli Cansunar, Nela Mrchkovska, and Ramses Ramses Llobet)
+      (with Asli Cansunar, Nela Mrchkovska, and Ramses Llobet)
     </p>
   </section>
 
