--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -26,6 +26,6 @@ redirect_from:
 
 <p>
   <a href="/files/Can_Bodrumlu_Resume.pdf" target="_blank" class="download-button">
-    Download My CV
+    Download
   </a>
 </p>
