--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -39,12 +39,15 @@ author_profile: true
   </section>
 
   <section>
-    <h2>Working Projects</h2>
-    <p>
-      <strong>What’s in a Name? Naming Practices as Acts of Political Resistance</strong> <br>
-      (with Asli Cansunar, Nela Mrchkovska, and Ramses Llobet)
-    </p>
-  </section>
+  <h2>Working Projects</h2>
+  <p>
+    <strong>What’s in a Name? Naming Practices as Acts of Political Resistance</strong> <br>
+    (with Asli Cansunar, Nela Mrchkovska, and Ramses Llobet)
+  </p>
+  <p>
+    <strong>Behind the Desk: What Becomes of Bureaucrats Who Plan Mass Violence?</strong> <br>
+  </p>
+</section>
 
   <section>
     <h2>Teaching</h2>
