--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -8,24 +8,50 @@ redirect_from:
 ---
 
 <style>
+  /* Styling for embedding the CV */
+  .cv-container {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .cv-frame {
+    width: 100%;
+    max-width: 800px; /* Adjust width for readability */
+    height: 1000px; /* Adjust height as needed */
+    border: 2px solid #4B2E83; /* Border matching button color */
+    border-radius: 10px;
+    overflow: hidden;
+  }
+
+  /* Styling for the download button */
   .download-button {
     display: inline-block;
     padding: 10px 20px;
     font-size: 16px;
     color: #fff;
-    background-color: #6CB4EE;
+    background-color: #4B2E83;
     text-decoration: none; /* Ensures no underline */
     border-radius: 5px;
     transition: background-color 0.3s ease;
   }
 
   .download-button:hover {
-    background-color: #0056b3; /* Darker blue on hover */
+    background-color: #361F5E; /* Slightly darker shade on hover */
   }
 </style>
 
-<p>
+<!-- Embed the CV -->
+<div class="cv-container">
+  <iframe 
+    src="/files/Can_Bodrumlu_Resume.pdf" 
+    class="cv-frame" 
+    title="Embedded CV">
+  </iframe>
+</div>
+
+<!-- Download button -->
+<p style="text-align: center;">
   <a href="/files/Can_Bodrumlu_Resume.pdf" target="_blank" class="download-button">
-    Download
+    Download CV
   </a>
 </p>
