--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -33,9 +33,29 @@ author_profile: true
       </p>
     </blockquote>
 
-    <p>
-      <a class="button" href="/files/MahmutcanBodrumlu_MA_Thesis_PoliticalScience.pdf" target="_blank">Download Thesis</a>
-    </p>
+   <style>
+  /* Styling for the download button */
+  .download-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #4B2E83;
+    text-decoration: none; /* Ensures no underline */
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+
+  .download-button:hover {
+    background-color: #361F5E; /* Slightly darker shade on hover */
+  }
+</style>
+
+<p style="text-align: center;">
+  <a href="/files/MahmutcanBodrumlu_MA_Thesis_PoliticalScience.pdf" target="_blank" class="download-button">
+    Download Thesis
+  </a>
+</p>
   </section>
 
   <section>
