--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -67,6 +67,10 @@ author_profile: true
   <p>
     <strong>Behind the Desk: What Becomes of Bureaucrats Who Plan Mass Violence?</strong> <br>
   </p>
+     <p>
+    <strong>Crisis in the Classroom: Analyzing the Role of Teacher Turnover in Shaping Educational Outcomes through Continuous Treatments
+</strong> <br>
+  </p>
 </section>
 
   <section>
