--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -68,7 +68,7 @@ author_profile: true
     <strong>Behind the Desk: What Becomes of Bureaucrats Who Plan Mass Violence?</strong> <br>
   </p>
      <p>
-    <strong>Crisis in the Classroom: Analyzing the Role of Teacher Turnover in Shaping Educational Outcomes through Continuous Treatments
+    <strong>Crisis in the Classroom: The Role of Teacher Turnover in Shaping Educational Outcomes
 </strong> <br>
   </p>
 </section>
