--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -10,52 +10,70 @@ author_profile: true
   <section>
     <h2>Research</h2>
     <p>
-      I completed my M.A. thesis titled "<em>The Role of Bureaucratic Purges in Shaping Public Service Provision</em>" 
-      in the Political Science department at Sabancı University, advised by Assist. Prof. Fatih Serkant Adıgüzel. 
-      Below is its abstract and a link to download the full text:
-    </p>
+  I completed my M.A. thesis titled "<em>The Role of Bureaucratic Purges in Shaping Public Service Provision</em>" 
+  in the Political Science department at Sabancı University, advised by Assist. Prof. Fatih Serkant Adıgüzel. 
+  Below is its abstract and a link to download the full text:
+</p>
 
-    <blockquote>
-      <p>
-        <small>
-          "This thesis examines the impact of bureaucratic purges on public service provision, focusing on the Turkish 
-          government's dismissal of nearly 130,000 public employees between 2016 and 2018 following a failed coup 
-          attempt. Leveraging novel administrative data on each dismissed state employee, it begins with an analysis of 
-          the spatial and administrative distribution of the dismissals. The research primarily moves beyond canonical 
-          approaches that view purges as power consolidation through elite purges, and instead captures the broader 
-          societal impacts by assessing changes in the state's service delivery capacity post-purge. Using a 
-          difference-in-differences model to analyze how varying magnitudes of dismissals affect public teachers on 
-          students' standardized test performance, findings reveal a decrease in student performance at the district 
-          level, while similar analyses for police dismissals do not indicate crime rate changes. Overall, this study 
-          seeks higher external validity by moving beyond limited samples and inherent methodological constraints in 
-          prior work on bureaucratic capacity's impact on public services."
-        </small>
-      </p>
-    </blockquote>
-
-   <style>
-  /* Styling for the download button */
-  .download-button {
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 16px;
-    color: #fff;
-    background-color: #4B2E83;
-    text-decoration: none; /* Ensures no underline */
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-  }
-
-  .download-button:hover {
-    background-color: #361F5E; /* Slightly darker shade on hover */
-  }
-</style>
+<details>
+  <summary><strong>View Abstract</strong></summary>
+  <p>
+    <small>
+      "This thesis examines the impact of bureaucratic purges on public service provision, focusing on the Turkish 
+      government's dismissal of nearly 130,000 public employees between 2016 and 2018 following a failed coup 
+      attempt. Leveraging novel administrative data on each dismissed state employee, it begins with an analysis of 
+      the spatial and administrative distribution of the dismissals. The research primarily moves beyond canonical 
+      approaches that view purges as power consolidation through elite purges, and instead captures the broader 
+      societal impacts by assessing changes in the state's service delivery capacity post-purge. Using a 
+      difference-in-differences model to analyze how varying magnitudes of dismissals affect public teachers on 
+      students' standardized test performance, findings reveal a decrease in student performance at the district 
+      level, while similar analyses for police dismissals do not indicate crime rate changes. Overall, this study 
+      seeks higher external validity by moving beyond limited samples and inherent methodological constraints in 
+      prior work on bureaucratic capacity's impact on public services."
+    </small>
+  </p>
+</details>
 
 <p style="text-align: center;">
   <a href="/files/MahmutcanBodrumlu_MA_Thesis_PoliticalScience.pdf" target="_blank" class="download-button">
     Download Thesis
   </a>
 </p>
+
+<style>
+  .download-button {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #4B2E83;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+
+  .download-button:hover {
+    background-color: #361F5E;
+  }
+
+  details summary {
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+  }
+
+  details[open] summary {
+    margin-bottom: 10px;
+  }
+
+  details small {
+    line-height: 1.4;
+    display: block;
+    margin-top: 5px;
+  }
+</style>
+    
   </section>
 
   <section>
@@ -68,7 +86,8 @@ author_profile: true
     <strong>Behind the Desk: What Becomes of Bureaucrats Who Plan Mass Violence?</strong> <br>
   </p>
      <p>
-    <strong>Crisis in the Classroom: The Role of Teacher Turnover in Shaping Educational Outcomes
+    <strong>Crisis in the Classroom, Crisis in the State: How Bureaucratic Purges Weaken Public Service
+Capacity
 </strong> <br>
   </p>
 </section>
