--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -10,40 +10,145 @@ author_profile: true
   <section>
     <h2>Research</h2>
     <p>
-  I completed my M.A. thesis titled "<em>The Role of Bureaucratic Purges in Shaping Public Service Provision</em>" 
-  in the Political Science department at Sabancı University, advised by Assist. Prof. Fatih Serkant Adıgüzel. 
-  Below is its abstract and a link to download the full text:
-</p>
+      I completed my M.A. thesis titled "<em>The Role of Bureaucratic Purges in Shaping Public Service Provision</em>" 
+      in the Political Science department at Sabancı University, advised by Assist. Prof. Fatih Serkant Adıgüzel. 
+      Below is its abstract and a link to download the full text:
+    </p>
 
-<details>
-  <summary><strong>View Abstract</strong></summary>
-  <p>
-    <small>
-      "This thesis examines the impact of bureaucratic purges on public service provision, focusing on the Turkish 
-      government's dismissal of nearly 130,000 public employees between 2016 and 2018 following a failed coup 
-      attempt. Leveraging novel administrative data on each dismissed state employee, it begins with an analysis of 
-      the spatial and administrative distribution of the dismissals. The research primarily moves beyond canonical 
-      approaches that view purges as power consolidation through elite purges, and instead captures the broader 
-      societal impacts by assessing changes in the state's service delivery capacity post-purge. Using a 
-      difference-in-differences model to analyze how varying magnitudes of dismissals affect public teachers on 
-      students' standardized test performance, findings reveal a decrease in student performance at the district 
-      level, while similar analyses for police dismissals do not indicate crime rate changes. Overall, this study 
-      seeks higher external validity by moving beyond limited samples and inherent methodological constraints in 
-      prior work on bureaucratic capacity's impact on public services."
-    </small>
-  </p>
-</details>
+    <details>
+      <summary><strong>View Abstract</strong></summary>
+      <p>
+        <small>
+          "This thesis examines the impact of bureaucratic purges on public service provision, focusing on the Turkish 
+          government's dismissal of nearly 130,000 public employees between 2016 and 2018 following a failed coup 
+          attempt. Leveraging novel administrative data on each dismissed state employee, it begins with an analysis of 
+          the spatial and administrative distribution of the dismissals. The research primarily moves beyond canonical 
+          approaches that view purges as power consolidation through elite purges, and instead captures the broader 
+          societal impacts by assessing changes in the state's service delivery capacity post-purge. Using a 
+          difference-in-differences model to analyze how varying magnitudes of dismissals affect public teachers on 
+          students' standardized test performance, findings reveal a decrease in student performance at the district 
+          level, while similar analyses for police dismissals do not indicate crime rate changes. Overall, this study 
+          seeks higher external validity by moving beyond limited samples and inherent methodological constraints in 
+          prior work on bureaucratic capacity's impact on public services."
+        </small>
+      </p>
+    </details>
 
-<p style="text-align: center;">
-  <a href="/files/MahmutcanBodrumlu_MA_Thesis_PoliticalScience.pdf" target="_blank" class="download-button">
-    Download Thesis
-  </a>
-</p>
+    <p style="text-align: center;">
+      <a href="/files/MahmutcanBodrumlu_MA_Thesis_PoliticalScience.pdf" target="_blank" class="download-button">
+        Download Thesis
+      </a>
+    </p>
+  </section>
+
+  <section>
+    <h2>Working Projects</h2>
+
+    <p>
+      <strong>Crisis in the Classroom, Crisis in the State: How Bureaucratic Purges Weaken Public Service Capacity</strong>
+    </p>
+
+    <details>
+      <summary><strong>View Abstract</strong></summary>
+      <p>
+        <small>
+          How do large-scale dismissals of public employees based on political affiliation affect state capacity? 
+          Although disruptions in public service provision are expected when states increasingly rely on street-level 
+          bureaucrats, the short-term consequences of removing those recruited through patronage networks remain 
+          understudied. This study examines the impact of bureaucratic purges on service delivery by analyzing 
+          large-scale teacher dismissals in Turkey following the 2016 coup attempt. Leveraging variation in dismissal 
+          intensity across administrative units as an exogenous shock, the analysis employs two-way fixed effects (TWFE) 
+          and random effects estimators to assess the effects on student performance in high school entrance exams. 
+          The findings indicate a significant decline in exam scores after teacher dismissals. In addition, the study 
+          explores the spatial distribution of dismissals and their links to authoritarian decision-making. By bridging 
+          research on bureaucratic turnover, state capacity, and educational outcomes, this study offers insight into 
+          the implications of politically motivated interventions on public service provision.
+        </small>
+      </p>
+    </details>
+
+    <p>
+      <strong>What’s in a Name? Naming Practices as Acts of Political Resistance</strong><br>
+      (with Asli Cansunar, Nela Mrchkovska, and Ramses Llobet)
+    </p>
+
+    <p>
+      <strong>Behind the Desk: What Becomes of Bureaucrats Who Plan Mass Violence?</strong><br>
+    </p>
+  </section>
+
+  <section>
+    <h2>Teaching</h2>
+    <p>
+      I served as a teaching assistant at Sabancı University from 2022 to 2024, leading discussion sessions for the 
+      <em>Humanity and Society</em> course (SPS102), with two sections each semester.
+    </p>
+  </section>
+
+  <section>
+    <h2>Fellowships</h2>
+    <ul>
+      <li>Graduate School Fellowship, University of Washington (2024 – present)</li>
+      <li>Graduate School Fellowship, Sabancı University (2022 – 2024)</li>
+      <li>Undergraduate Fellowship, Boğaziçi University Foundation (2017 – 2022)</li>
+    </ul>
+  </section>
+
+</div>
 
 <style>
+  section {
+    margin-bottom: 40px;
+  }
+
+  section h2 {
+    border-bottom: 2px solid #e0e0e0;
+    padding-bottom: 4px;
+    margin-bottom: 15px;
+  }
+
+  details summary {
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 500;
+    color: #4B2E83;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    transition: color 0.3s ease;
+  }
+
+  details summary:hover {
+    color: #361F5E;
+  }
+
+  details[open] summary::after {
+    content: "▲";
+    float: right;
+    font-size: 12px;
+    margin-left: 8px;
+  }
+
+  details summary::after {
+    content: "▼";
+    float: right;
+    font-size: 12px;
+    margin-left: 8px;
+  }
+
+  details p small {
+    display: block;
+    background-color: #f9f9f9;
+    padding: 10px 15px;
+    border-left: 4px solid #4B2E83;
+    font-size: 14px;
+    line-height: 1.5;
+    border-radius: 5px;
+  }
+
   .download-button {
     display: inline-block;
     padding: 10px 20px;
+    margin-top: 15px;
     font-size: 16px;
     color: #fff;
     background-color: #4B2E83;
@@ -56,57 +161,7 @@ author_profile: true
     background-color: #361F5E;
   }
 
-  details summary {
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 10px;
-    margin-bottom: 5px;
-  }
-
-  details[open] summary {
-    margin-bottom: 10px;
-  }
-
-  details small {
-    line-height: 1.4;
-    display: block;
-    margin-top: 5px;
+  p[style*="text-align: center"] {
+    margin-bottom: 0;
   }
 </style>
-    
-  </section>
-
-  <section>
-  <h2>Working Projects</h2>
-  <p>
-    <strong>What’s in a Name? Naming Practices as Acts of Political Resistance</strong> <br>
-    (with Asli Cansunar, Nela Mrchkovska, and Ramses Llobet)
-  </p>
-  <p>
-    <strong>Behind the Desk: What Becomes of Bureaucrats Who Plan Mass Violence?</strong> <br>
-  </p>
-     <p>
-    <strong>Crisis in the Classroom, Crisis in the State: How Bureaucratic Purges Weaken Public Service
-Capacity
-</strong> <br>
-  </p>
-</section>
-
-  <section>
-    <h2>Teaching</h2>
-    <p>
-      I served as a teaching assistant at Sabancı University from 2022 to 2024, leading discussion sessions for the 
-      <em>Humanity and Society</em> course, with two sections each semester.
-    </p>
-  </section>
-
-  <section>
-    <h2>Fellowships</h2>
-    <ul>
-      <li>Graduate School Fellowship, University of Washington (2024 – Present)</li>
-      <li>Graduate School Fellowship, Sabancı University (2022 – 2024)</li>
-      <li>Undergraduate Fellowship, Boğaziçi University Foundation (2017 – 2022)</li>
-    </ul>
-  </section>
-
-</div>
