--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -10,9 +10,9 @@ author_profile: true
   <section>
     <h2>Research</h2>
     <p>
-      I completed my M.A. thesis titled "<em>The Role of Bureaucratic Purges in Shaping Public Service Provision</em>" 
+      In 2024, I completed my M.A. thesis titled "<em>The Role of Bureaucratic Purges in Shaping Public Service Provision</em>" 
       in the Political Science department at Sabancı University, advised by Assist. Prof. Fatih Serkant Adıgüzel. 
-      Below is its abstract and a link to download the full text:
+     
     </p>
 
     <details>
