--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -152,7 +152,7 @@ author_profile: true
     font-size: 16px;
     color: #fff;
     background-color: #4B2E83;
-    text-decoration: none;
+    text-decoration: none !important;
     border-radius: 5px;
     transition: background-color 0.3s ease;
   }
