--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -30,7 +30,7 @@ redirect_from:
     font-size: 16px;
     color: #fff;
     background-color: #4B2E83;
-    text-decoration: none; /* Ensures no underline */
+    text-decoration: none !important;  /* ← this forces removal */
     border-radius: 5px;
     transition: background-color 0.3s ease;
   }
