--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -19,7 +19,7 @@ author_profile: true
       <summary><strong>View Abstract</strong></summary>
       <p>
         <small>
-          "This thesis examines the impact of bureaucratic purges on public service provision, focusing on the Turkish 
+          This thesis examines the impact of bureaucratic purges on public service provision, focusing on the Turkish 
           government's dismissal of nearly 130,000 public employees between 2016 and 2018 following a failed coup 
           attempt. Leveraging novel administrative data on each dismissed state employee, it begins with an analysis of 
           the spatial and administrative distribution of the dismissals. The research primarily moves beyond canonical 
@@ -29,7 +29,7 @@ author_profile: true
           students' standardized test performance, findings reveal a decrease in student performance at the district 
           level, while similar analyses for police dismissals do not indicate crime rate changes. Overall, this study 
           seeks higher external validity by moving beyond limited samples and inherent methodological constraints in 
-          prior work on bureaucratic capacity's impact on public services."
+          prior work on bureaucratic capacity's impact on public services.
         </small>
       </p>
     </details>
