--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -52,17 +52,7 @@ author_profile: true
       <summary><strong>View Abstract</strong></summary>
       <p>
         <small>
-          How do large-scale dismissals of public employees based on political affiliation affect state capacity? 
-          Although disruptions in public service provision are expected when states increasingly rely on street-level 
-          bureaucrats, the short-term consequences of removing those recruited through patronage networks remain 
-          understudied. This study examines the impact of bureaucratic purges on service delivery by analyzing 
-          large-scale teacher dismissals in Turkey following the 2016 coup attempt. Leveraging variation in dismissal 
-          intensity across administrative units as an exogenous shock, the analysis employs two-way fixed effects (TWFE) 
-          and random effects estimators to assess the effects on student performance in high school entrance exams. 
-          The findings indicate a significant decline in exam scores after teacher dismissals. In addition, the study 
-          explores the spatial distribution of dismissals and their links to authoritarian decision-making. By bridging 
-          research on bureaucratic turnover, state capacity, and educational outcomes, this study offers insight into 
-          the implications of politically motivated interventions on public service provision.
+          Political elites in authoritarian regimes often resort to dramatic bureaucratic purges as a strategy to tighten their grip on power. Yet, despite their growing global frequency, the far-reaching social consequences of such sweeping dismissals remain poorly understood. This study examines the impact of bureaucratic purges on service delivery by analyzing mass public employee dismissals in Turkey following the 2016 coup attempt. Leveraging variation in teachers' dismissals across administrative units as an exogenous shock, it aims to estimate the effect of the purge on student performance in high school entrance exams. The results show a significant decline in exam scores following teacher dismissals. By bridging research on bureaucratic turnover, state capacity, and education outcomes, this study offers insight into how politically motivated interventions can undermine public service provision.
         </small>
       </p>
     </details>
