--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -45,7 +45,7 @@ author_profile: true
     <h2>Working Projects</h2>
 
     <p>
-      <strong>Crisis in the Classroom, Crisis in the State: How Bureaucratic Purges Weaken Public Service Capacity</strong>
+      <strong>When the Government Fires the State: How Bureaucratic Purges Weaken Public Service Capacity</strong>
     </p>
 
     <details>
