--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -43,7 +43,7 @@ redirect_from:
 <!-- Embed the CV -->
 <div class="cv-container">
   <iframe 
-    src="/files/CanBodrumlu_Resume.pdf" 
+    src="/files/CanBodrumlu_cv.pdf" 
     class="cv-frame" 
     title="Embedded CV">
   </iframe>
