--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -45,27 +45,29 @@ author_profile: true
     <h2>Working Projects</h2>
 
     <p>
-      <strong>When the Government Fires the State: How Bureaucratic Purges Weaken Public Service Capacity</strong>
-    </p>
+  <strong>When the Government Fires the State: How Bureaucratic Purges Weaken Public Service Capacity</strong><br>
+  <em>UW Philo S. Bennett Prize for Best Graduate Paper in Democratic Politics (2025)</em>
+</p>
 
-    <details>
-      <summary><strong>View Abstract</strong></summary>
-      <p>
-        <small>
-          Political elites in authoritarian regimes often resort to dramatic bureaucratic purges
-as a strategy to tighten their grip on power. Yet, despite their growing global
-frequency, the far-reaching social consequences of such sweeping dismissals remain
-poorly understood. This study examines the impact of bureaucratic purges on service
-delivery by analyzing mass public employee dismissals in Turkey following the 2016
-coup attempt. Leveraging variation in teachers’ dismissals across administrative
-units as an exogenous shock, it aims to estimate the effect of the purge on student
-performance in high school entrance exams. The results show a significant decline
-in exam scores following teacher dismissals. By bridging research on bureaucratic
-turnover, state capacity, and education outcomes, this study offers insight into how
-politically motivated interventions can undermine public service provision.
-        </small>
-      </p>
-    </details>
+<details>
+  <summary><strong>View Abstract</strong></summary>
+  <p>
+    <small>
+      Political elites in authoritarian regimes often resort to dramatic bureaucratic purges
+      as a strategy to tighten their grip on power. Yet, despite their growing global
+      frequency, the far-reaching social consequences of such sweeping dismissals remain
+      poorly understood. This study examines the impact of bureaucratic purges on service
+      delivery by analyzing mass public employee dismissals in Turkey following the 2016
+      coup attempt. Leveraging variation in teachers’ dismissals across administrative
+      units as an exogenous shock, it aims to estimate the effect of the purge on student
+      performance in high school entrance exams. The results show a significant decline
+      in exam scores following teacher dismissals. By bridging research on bureaucratic
+      turnover, state capacity, and education outcomes, this study offers insight into how
+      politically motivated interventions can undermine public service provision.
+    </small>
+  </p>
+</details>
+
 
     <p>
       <strong>What’s in a Name? Naming Practices as Acts of Political Resistance</strong><br>
