--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -90,6 +90,7 @@ author_profile: true
   <section>
     <h2>Fellowships</h2>
     <ul>
+       <li>Richard B. Wesley Comparative Politics Fellowship, University of Washington (2025)</li>
       <li>Graduate School Fellowship, University of Washington (2024 – 2025)</li>
       <li>Graduate School Fellowship, Sabancı University (2022 – 2024)</li>
       <li>Undergraduate Fellowship, Boğaziçi University Foundation (2017 – 2022)</li>
