--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -46,9 +46,9 @@ author_profile: true
 
     <p>
   <strong>When the Government Fires the State: How Bureaucratic Purges Weaken Public Service Capacity</strong><br>
-  </p>
-<p style="margin-left: 1em; font-size: 0.9em;">
-  • <em>UW Philo S. Bennett Prize for Best Graduate Paper in Democratic Politics (2025)</em>
+  <span style="margin-left: 1em; font-size: 0.9em; display: inline-block;">
+    • <em>UW Philo S. Bennett Prize for Best Graduate Paper in Democratic Politics (2025)</em>
+  </span>
 </p>
 
 <details>
