--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -45,7 +45,7 @@ author_profile: true
     <h2>Working Projects</h2>
 
     <p>
-  <strong>When the Government Fires the State: How Bureaucratic Purges Weaken Public Service Capacity</strong><br>
+  <strong>When the Government Fires the State: How Bureaucratic Purges Weaken Public Service Capacity (Under Review) </strong><br>
   <span style="margin-left: 1em; font-size: 0.9em; display: inline-block;">
     • <em>UW Philo S. Bennett Prize for Best Graduate Paper in Democratic Politics (2025)</em>
   </span>
