--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -11,7 +11,7 @@ author_profile: true
     <h2>Research</h2>
     <p>
       In 2024, I completed my M.A. thesis titled "<em>The Role of Bureaucratic Purges in Shaping Public Service Provision</em>" 
-      in the Political Science department at Sabancı University, advised by Assist. Prof. Fatih Serkant Adıgüzel. 
+      in the Political Science department at Sabancı University, advised by Assist. Prof. Fatih Serkant Adiguzel. 
      
     </p>
 
@@ -96,6 +96,10 @@ author_profile: true
       (with Asli Cansunar, Nela Mrchkovska, and Ramses Llobet)
     </p>
 
+    <p>
+      <strong>Under the Iron Gavel: Probing the Quieting Effect of Authoritarian University Takeovers on Political Science Research</strong><br>
+      (with Asli Cansunar)
+    </p>
  
   </section>
 
