--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -34,11 +34,13 @@ author_profile: true
       </p>
     </details>
 
-    <p style="text-align: center;">
-      <a href="/files/MahmutcanBodrumlu_MA_Thesis_PoliticalScience.pdf" target="_blank" class="download-button">
-        Download Thesis
-      </a>
-    </p>
+<p>
+  <a href="/files/MahmutcanBodrumlu_MA_Thesis_PoliticalScience.pdf" target="_blank" class="download-link">
+    <span aria-label="Download Thesis" style="font-size: 15px;">
+      📄 Download Thesis (PDF)
+    </span>
+  </a>
+</p>
   </section>
 
   <section>
@@ -172,21 +174,23 @@ author_profile: true
     border-radius: 5px;
   }
 
-  .download-button {
-    display: inline-block;
-    padding: 10px 20px;
-    margin-top: 15px;
-    font-size: 16px;
-    color: #fff;
-    background-color: #4B2E83;
-    text-decoration: none !important;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-  }
+.download-link {
+  display: inline-block;
+  font-size: 15px;
+  color: #4B2E83;
+  background: none;
+  border: 1px solid #e0e0e0;
+  border-radius: 4px;
+  padding: 6px 14px;
+  text-decoration: none;
+  transition: background 0.2s, color 0.2s, border 0.2s;
+}
 
-  .download-button:hover {
-    background-color: #361F5E;
-  }
+.download-link:hover {
+  background: #f5f5fa;
+  color: #361F5E;
+  border-color: #4B2E83;
+}
 
   p[style*="text-align: center"] {
     margin-bottom: 0;
