--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -182,10 +182,10 @@ author_profile: true
   border: 1px solid #e0e0e0;
   border-radius: 4px;
   padding: 6px 14px;
-  text-decoration: none;
+  text-decoration: none !important; /* <-- Add !important */
   transition: background 0.2s, color 0.2s, border 0.2s;
 }
-
+  
 .download-link:hover {
   background: #f5f5fa;
   color: #361F5E;
