--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -45,9 +45,11 @@ redirect_from:
 </style>
 
 <!-- Download button -->
-<p style="text-align: center;">
+<p>
   <a href="/files/Can_Bodrumlu_Resume.pdf" target="_blank" class="download-link">
-    Download CV
+    <span aria-label="Download CV" style="font-size: 15px;">
+      📄 Download CV (PDF)
+    </span>
   </a>
 </p>
 
