--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -46,7 +46,7 @@ redirect_from:
 
 <!-- Download button -->
 <p>
-  <a href="/files/Can_Bodrumlu_Resume.pdf" target="_blank" class="download-link">
+  <a href="/files/CanBodrumlu_cv.pdf" target="_blank" class="download-link">
     <span aria-label="Download CV" style="font-size: 15px;">
       📄 Download CV (PDF)
     </span>
