--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -106,12 +106,38 @@ author_profile: true
   </section>
 
   <section>
-    <h2>Teaching</h2>
-    <p>
-      I served as a teaching assistant at Sabancı University from 2022 to 2024, leading discussion sessions for the 
-      <em>Humanity and Society</em> course (SPS102), with two sections each semester.
-    </p>
-  </section>
+  <h2>Teaching</h2>
+  <ul style="list-style: none; padding-left: 0;">
+
+    <li style="margin-bottom: 20px;">
+      <strong>Autumn 2025</strong><br>
+      <span style="font-size: 0.95em; color: #444;">
+        <em>University of Washington</em>
+      </span>
+      <ul>
+        <li>
+          <strong>POLS 204: Introduction to Comparative Politics</strong><br>
+          <em>Teaching Assistant</em> – Led weekly quiz sections, provided guidance on readings, and offered office hours to support student learning.
+        </li>
+      </ul>
+    </li>
+
+    <li style="margin-bottom: 20px;">
+      <strong>2022 – 2024</strong><br>
+      <span style="font-size: 0.95em; color: #444;">
+        <em>Sabancı University</em>
+      </span>
+      <ul>
+        <li>
+          <strong>SPS 102: Humanity and Society</strong><br>
+          <em>Teaching Assistant</em> – Ran two discussion sections each semester, facilitated class debates, and provided academic support to students.
+        </li>
+      </ul>
+    </li>
+
+  </ul>
+</section>
+
 
   <section>
     <h2>Fellowships</h2>
