--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -105,30 +105,38 @@ author_profile: true
  
   </section>
 
-  <section>
+<section>
   <h2>Teaching</h2>
   <ul style="list-style: none; padding-left: 0;">
 
-    <li style="margin-bottom: 20px;">
-      <strong>Autumn 2025</strong><br>
-      <span style="font-size: 0.95em; color: #444;">
-        <em>University of Washington</em>
+    <li style="margin-bottom: 25px;">
+      <span style="font-size: 1.05em; font-weight: bold; color: #4B2E83;">
+        University of Washington
       </span>
-      <ul>
-        <li>
+      <ul style="margin-top: 8px;">
+        <li style="margin-bottom: 15px;">
+          <strong>Autumn 2025</strong><br>
           <strong>POLS 204: Introduction to Comparative Politics</strong><br>
           <em>Teaching Assistant</em> – Led weekly quiz sections, provided guidance on readings, and offered office hours to support student learning.
         </li>
+        <!-- Future quarters can go here -->
+        <!--
+        <li>
+          <strong>Winter 2026</strong><br>
+          <strong>POLS XXX: [Course Title]</strong><br>
+          <em>Teaching Assistant</em> – Description...
+        </li>
+        -->
       </ul>
     </li>
 
-    <li style="margin-bottom: 20px;">
-      <strong>2022 – 2024</strong><br>
-      <span style="font-size: 0.95em; color: #444;">
-        <em>Sabancı University</em>
+    <li style="margin-bottom: 25px;">
+      <span style="font-size: 1.05em; font-weight: bold; color: #4B2E83;">
+        Sabancı University
       </span>
-      <ul>
+      <ul style="margin-top: 8px;">
         <li>
+          <strong>2022 – 2024</strong><br>
           <strong>SPS 102: Humanity and Society</strong><br>
           <em>Teaching Assistant</em> – Ran two discussion sections each semester, facilitated class debates, and provided academic support to students.
         </li>
@@ -137,6 +145,7 @@ author_profile: true
 
   </ul>
 </section>
+
 
 
   <section>
