--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -115,12 +115,12 @@ author_profile: true
       </span>
       <ul style="margin-top: 8px;">
         <li style="margin-bottom: 15px;">
-          <strong>Autumn 2025</strong><br>
+         <strong>Autumn 2025</strong><br>
           <strong>POLS 204: Introduction to Comparative Politics</strong><br>
-          <em>Teaching Assistant</em> 
-          <span style="font-size: 0.9em; color: #666;">Instructor of Record: Prof. [Name Here]</span>
-
+          <em>Teaching Assistant</em> – Led weekly quiz sections, provided guidance on readings, and offered office hours to support student learning.<br>
+          <span style="font-size: 0.9em; color: #666;">Instructor of Record: Prof. Asli Cansunar</span>
         </li>
+        
         <!-- Future quarters can go here -->
         <!--
         <li>
