--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -11,7 +11,7 @@ author_profile: true
     <h2>Research</h2>
     <p>
       In 2024, I completed my M.A. thesis titled "<em>The Role of Bureaucratic Purges in Shaping Public Service Provision</em>" 
-      in the Political Science department at Sabancı University, advised by Assist. Prof. Fatih Serkant Adiguzel. 
+      in the Political Science department at Sabanci University, advised by Assist. Prof. Fatih Serkant Adiguzel. 
      
     </p>
 
@@ -134,7 +134,7 @@ author_profile: true
 
     <li style="margin-bottom: 25px;">
       <span style="font-size: 1.05em; font-weight: bold; color: #4B2E83;">
-        Sabancı University
+        Sabanci University
       </span>
       <ul style="margin-top: 8px;">
         <li>
