--- a/_pages/academic.html
+++ b/_pages/academic.html
@@ -153,6 +153,7 @@ author_profile: true
   <section>
     <h2>Fellowships</h2>
     <ul>
+      <li>on Lavoie Fellowship, The Mercatus Center at George Mason University (2025 – 2026) </li>
        <li>Richard B. Wesley Comparative Politics Fellowship, University of Washington (2025)</li>
       <li>Graduate School Fellowship, University of Washington (2024 – 2025)</li>
       <li>Graduate School Fellowship, Sabancı University (2022 – 2024)</li>
